--- a/src/app/user/get/get.component.html
+++ b/src/app/user/get/get.component.html
@@ -16,7 +16,7 @@
              id="first_name" 
              name="first_name"
              formControlName ="first_name"
-             [ngClass]="{'is-invalid':userForm.get('first_name').touched && userForm.get('first_name').invalid}"
+             [ngClass]="{'is-invalid':userForm?.get('first_name')?.touched && userForm?.get('first_name')?.invalid}"
              >
           <div class="invalid-feedback">
             <div>First Name is Required</div>
@@ -34,7 +34,7 @@
             class="form-control" 
             id="last_name"
             formControlName ="last_name"
-            [ngClass]="{'is-invalid':userForm.get('last_name').touched && userForm.get('last_name').invalid}"
+            [ngClass]="{'is-invalid':userForm?.get('last_name')?.touched && userForm?.get('last_name')?.invalid}"
             name="last_name">
             <div class="invalid-feedback">
               <div>Last Name is Required</div>
@@ -51,13 +51,13 @@
             class="form-control" 
             id="email"
             formControlName ="email"
-            [ngClass]="{'is-invalid':userForm.get('email').touched && userForm.get('email').invalid}"
+            [ngClass]="{'is-invalid':userForm?.get('email')?.touched && userForm?.get('email')?.invalid}"
             name="email">
             <div 
-             *ngIf="userForm.get('email').touched && userForm.get('email').invalid"
+             *ngIf="userForm?.get('email')?.touched && userForm?.get('email')?.invalid"
              class="invalid-feedback">
-              <div *ngIf = "userForm.get('email').errors.required">Email is Required</div>
-              <div *ngIf = "userForm.get('email').errors.email"> Invalid Email !!</div>
+              <div *ngIf = "userForm?.get('email')?.errors?.required">Email is Required</div>
+              <div *ngIf = "userForm?.get('email')?.errors?.email"> Invalid Email !!</div>
             </div>  
         </div>
        
@@ -72,13 +72,13 @@
               class="form-control"
               id="password"
               formControlName ="password"
-              [ngClass]="{'is-invalid':userForm.get('password').touched && userForm.get('password').invalid}"
+              [ngClass]="{'is-invalid':userForm?.get('password')?.touched && userForm?.get('password')?.invalid}"
               name="password">
               <div 
-              *ngIf = "userForm.get('password').touched && userForm.get('password').invalid"
+              *ngIf = "userForm?.get('password')?.touched && userForm?.get('password')?.invalid"
               class="invalid-feedback">
-                <div *ngIf = "userForm.get('password').errors.required" >Password is Required</div>
-                <div *ngIf = "userForm.get('password').errors.minLength" >Password need atleast 4 charecters</div>
+                <div *ngIf = "userForm?.get('password')?.errors?.required" >Password is Required</div>
+                <div *ngIf = "userForm?.get('password')?.errors?.minLength" >Password need atleast 4 charecters</div>
               </div>  
         </div>
         
