--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -9,7 +9,7 @@
   }
   </style>  
 
-
+<h2>User Details</h2>
 <div class="container-fluid md-5 p-5" >
   <div class="row" >      
 <div class="col-6">
