--- a/src/app/user/get/get.component.html
+++ b/src/app/user/get/get.component.html
@@ -1,5 +1,5 @@
  
-
+ <h3>Registration</h3>
   <form *ngIf="userForm" [formGroup]="userForm" (ngSubmit)=" userForm.valid && onSubmit()">
      <input type="hidden"
      id = "user_id"
